fix: white space

--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ html,
 body {
   overflow-x: hidden;
   max-width: 100vw;
-  background: #000000;
+  background: #fff;
 }
 
 body {
